--- a/src/components/comicsList/comicsList.scss
+++ b/src/components/comicsList/comicsList.scss
@@ -1,3 +1,5 @@
+@import '../../style/variables.scss';
+
 .comics {
     &__list {
         margin-top: 45px;
@@ -9,11 +11,18 @@
         row-gap: 55px;
     }
     &__item {
-        transition: 0.3s transform;
         &-img {
             box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25);
             width: 225px;
             height: 345px;
+            transition: 0.3s transform;
+            &__selected {
+                box-shadow: 0 5px 20px $main-color;
+                transform: translateY(-8px);
+            }
+            &:hover {
+                transform: translateY(-5px);
+            }
         }
         &-name {
             margin-top: 10px;
@@ -29,8 +38,6 @@
             color: rgba(0, 0, 0, 0.6);
             text-transform: uppercase;
         }
-        &:hover {
-            transform: translateY(-5px);
-        }
+        
     }
 }
