--- a/src/components/charInfo/charInfo.scss
+++ b/src/components/charInfo/charInfo.scss
@@ -1,12 +1,15 @@
 @import '../../style/variables.scss';
 
 .char {
+    box-sizing: border-box;
     &__info {
         padding: 25px;
         box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
-        position: relative;
         z-index: 5;
         background-color: #fff;
+        // max-height: 70vh;
+        // position: sticky;
+        top: 0;
         &-name {
             font-weight: bold;
             font-size: 22px;
@@ -43,10 +46,11 @@
         font-size: 18px;
         line-height: 24px;
         margin-top: 10px;
-        // transition: top 0.1s ease-in-out;
         &-list {
-            // position: relative;
-            margin-top: 10px;
+            top: 0;
+            position: sticky;
+            overflow: scroll;
+            margin-top: 20px;
         }
         &-item {
             display: flex;
