--- a/src/components/searchCharForm/searchformchar.scss
+++ b/src/components/searchCharForm/searchformchar.scss
@@ -7,7 +7,8 @@
             padding: 25px;
             margin-top: 30px;
             box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
-            position: relative;
+            // position: sticky;
+            // top: 0;
             z-index: 5;
             background-color: #fff;
         }
